# flp-vault

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-grouping/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-02-25-flp-vault-design.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: browse.rs  groups.rs  mod.rs  scan.rs  settings.rs
src-tauri/src/matcher/: mod.rs  normalize.rs  scorer.rs  signals.rs  union_find.rs
src-tauri/src/parser/: events.rs  flp.rs  mod.rs  types.rs
src-tauri/src/services/: grouper.rs  mod.rs  scanner.rs
src-tauri/src/store/: connection.rs  files.rs  groups.rs  migrations.rs  mod.rs  settings.rs
src/js/: api.js  main.js
src/js/panels/: scan-table.js  settings-panel.js
src/js/workflow/: review-panel.js
src/styles/: main.css
